--- a/customize-page.html
+++ b/customize-page.html
@@ -36,7 +36,7 @@
             </div>
 
             <!-- Select Input and its dropdown -->
-            <div class="fyt-select mt-4">
+            <!-- <div class="fyt-select mt-4">
               <div class="input-group">
                 <div class="input-group-prepend">
                   <span class="fyticons-search"></span>
@@ -62,10 +62,26 @@
                   </li>
                 </ul>
               </div>
-            </div>
+            </div> -->
 
             <!-- Tags Container and Tags -->
             <div class="fyt-tag">
+              <div class="fyt-tag-item">
+                <span>Kerala</span>
+                <button class="fyt-tag-button">
+                  <span class="fyticons-solid-black--close"
+                    ><span class="path1"></span><span class="path2"></span
+                  ></span>
+                </button>
+              </div>
+              <div class="fyt-tag-item">
+                <span>Beaches</span>
+                <button class="fyt-tag-button">
+                  <span class="fyticons-solid-black--close"
+                    ><span class="path1"></span><span class="path2"></span
+                  ></span>
+                </button>
+              </div>
               <div class="fyt-tag-item">
                 <span>Kerala</span>
                 <button class="fyt-tag-button">
@@ -375,24 +391,24 @@
                       </h4>
                       <div class="fyt-final">
                         <div class="row">
-                          <div class="col">
+                          <div class="col-12 col-sm-4">
                             <label class="fyt-final-label">Location</label>
                             <span class="fyt-final-value">
                               Kerala - Beaches
                             </span>
                           </div>
-                          <div class="col">
+                          <div class="col-12 col-sm-4">
                             <label class="fyt-final-label">Duration</label>
                             <span class="fyt-final-value">14-28 Days</span>
                           </div>
-                          <div class="col">
+                          <div class="col-12 col-sm-4">
                             <label class="fyt-final-label">
                               Number of People
                             </label>
                             <span class="fyt-final-value">4 Adults</span>
                           </div>
                         </div>
-                        <div class="row mt-5">
+                        <div class="row mt-2 mt-sm-5">
                           <div class="col">
                             <label class="fyt-final-label">
                               Number of People
