--- a/customize-page.html
+++ b/customize-page.html
@@ -36,7 +36,7 @@
             </div>
 
             <!-- Select Input and its dropdown -->
-            <!-- <div class="fyt-select mt-4">
+            <div class="fyt-select mt-4">
               <div class="input-group">
                 <div class="input-group-prepend">
                   <span class="fyticons-search"></span>
@@ -62,7 +62,7 @@
                   </li>
                 </ul>
               </div>
-            </div> -->
+            </div>
 
             <!-- Tags Container and Tags -->
             <div class="fyt-tag">
