--- a/customize-page.html
+++ b/customize-page.html
@@ -157,7 +157,29 @@
                   >
                     <div class="wizard-box-pane-content">
                       <h4 class="text-center">
-                        When is your departure from Mumbai
+                        When is your departure from
+                        <div class="fyt-switch-input">
+                          <div class="fyt-switch-input-box">
+                            <input
+                              type="text"
+                              readonly
+                              class="fyt-switch-input-target"
+                              value="Mumbai"
+                            />
+                            <button
+                              class="fyt-switch-input-btn fyt-switch-input-btn_save d-none"
+                              type="button"
+                            >
+                              <span class="fyticons-tick"></span>
+                            </button>
+                            <button
+                              class="fyt-switch-input-btn fyt-switch-input-btn_edit"
+                              type="button"
+                            >
+                              <span class="fyticons-edit"></span>
+                            </button>
+                          </div>
+                        </div>
                       </h4>
                       <div class="fyt-month">
                         <a
